<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/log_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/background_light"
            android:contentDescription="@string/logo"
            android:minHeight="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/log_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:drawableStart="@android:drawable/sym_action_email"
            android:lines="1"
            android:textColor="#ffffff" />
        <!--android:inputType="textEmailAddress"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/log_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/log_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/log_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/not_a_member_register_here"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
