<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/register_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stat_title"
            android:orientation="vertical"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Full name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/reg_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_person_white"
                android:drawableStart="@drawable/ic_person_white"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/reg_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_mail_white"
                android:drawableStart="@drawable/ic_mail_white"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/reg_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_pswd_white"
                android:drawableStart="@drawable/ic_pswd_white"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/colorWhite" />
            <!--android:inputType="textEmailAddress"-->

            <Button
                android:id="@+id/reg_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/reg_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/already_registered_login_here"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>